k8s-yaml/kube-prometheus/blackbox-exporter/blackbox-exporter.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blackbox-exporter
  namespace: monitoring
  labels:
    app.kubernetes.io/instance: blackbox
    app.kubernetes.io/name: blackbox-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: blackbox
      app.kubernetes.io/name: blackbox-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: blackbox
        app.kubernetes.io/name: blackbox-exporter
    spec:
      volumes:
        - name: config
          configMap:
            name: blackbox-exporter
            defaultMode: 420
      containers:
        - name: blackbox-exporter
          image: 'prom/blackbox-exporter:latest'
          args:
            - '--config.file=/etc/blackbox_exporter/config.yml'
            - '--log.level=info'
            - '--web.listen-address=:9115'
          securityContext:
            capabilities:
              add:
                - NET_RAW
            runAsUser: 1000
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          ports:
            - name: http
              containerPort: 9115
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/blackbox_exporter
          livenessProbe:
            httpGet:
              path: /health
              port: 9115
          readinessProbe:
            httpGet:
              path: /health
              port: 9115
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
